--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-player": "^2.14.1",
     "react-redux": "^9.1.0",
     "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
