--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "install": "^0.13.0",
     "npm": "^10.4.0",
     "or": "^0.2.0",
